fixed spacing issue in dietary restrictions

--- a/src/App.css
+++ b/src/App.css
@@ -121,7 +121,7 @@ li {
   font-family: 'Open Sans', sans-serif;
   font-size: 2rem;
   color: #81807E;
-  padding: 10px;
+  padding: 0 10px;
 }
 
 .formLabelTop {
